[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/Entities/Characters.gd" type="Script" id=1]
[ext_resource path="res://src/Dialogues/Dialog.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/enemy.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 26.4529, 23.5545 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 104, 92 )

[node name="characters" type="KinematicBody2D"]
scale = Vector2( 0.5, 0.5 )
collision_layer = 2
collision_mask = 5
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="DialogBox" parent="." instance=ExtResource( 2 )]
visible = false
margin_left = -324.0
margin_top = 130.0
margin_right = 336.0
margin_bottom = 220.0

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.452911, -0.445496 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.452911, -0.445496 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
editor/display_folded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
